<resources>
    <string name="app_name">Android File Vault</string>
    <string name="vault_1_button">Open Vault</string>
    <string name="export_selected_file">Export Selected Files</string>
    <string name="share_file">Share Files</string>
    <string name="export_all_files">Export All Files</string>
    <string name="share_all_files">Share All Files</string>
    <string name="latest">Latest</string>
    <string name="star">Star</string>
    <string name="login">Login</string>
    <string name="password_hint">Please Enter Your Code</string>
    <string name="please_set_password">Please Enter a Password</string>
    <string name="next_move_set_password">Next</string>
    <string name="previous_move_set_password">Back</string>
    <string name="two_password_not_match">The passwords do not match, please entry again</string>
    <string name="two_password_not_match_title">Passwords not Match</string>
    <string name="enter_password_again">Enter Again</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="string_export">export</string>
    <string name="string_share">share</string>
    <string name="take_photo">Take Photo</string>
    <string name="send_to">Send To</string>

    <!--Setting-->
    <string name="small_font_size">Normal Size</string>
    <string name="big_font_size">Big Size</string>

    <!--Drawer-->
    <string name="import_files">Import Files</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="exit_vault">Exit Vault</string>

</resources>
