<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_item_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_item_clear"
        android:title="@string/clear_search"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_export_selected_files"
        android:title="@string/export_selected_file"/>
    <item android:id="@+id/menu_take_photo"
        android:title="@string/take_photo"/>
    <item android:id="@+id/menu_share_selected_files"
        android:title="@string/share_file"/>
    <item android:id="@+id/menu_export_all_files"
        android:title="@string/export_all_files"/>
    <item android:id="@+id/menu_share_all_files"
        android:title="@string/share_all_files"/>
    <item android:id="@+id/menu_latest"
        android:title="@string/latest"/>
    <item android:id="@+id/menu_star"
        android:title="@string/star"/>

</menu>